2011-02-03  Era Eriksson  <era+tramp@iki.fi>  (tiny change)

	* tramp.el (tramp-postfix-method-format)
	(tramp-postfix-method-regexp, tramp-prefix-domain-format)
	(tramp-prefix-domain-regexp, tramp-postfix-user-format)
	(tramp-postfix-user-regexp, tramp-prefix-port-format)
	(tramp-prefix-port-regexp, tramp-postfix-host-format)
	(tramp-postfix-host-regexp, tramp-handle-substitute-in-file-name):
	Doc fix.

2011-02-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-remote-path): Add default settings for
	`tramp-default-remote-path' to the docstring.
	(tramp-get-remote-path): Suppress error message when `getconf
	PATH' fails.

	* tramp-smb.el (tramp-smb-errors): Add "NT_STATUS_UNSUCCESSFUL".

2011-01-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method): Initialize with pscp/plink only
	when running under W32.
	(tramp-debug-message): Extend function exclude list.  Use `regexp-opt'.

	* tramp-sh.el (tramp-find-inline-compress)
	(tramp-get-inline-coding): Quote command after pipe symbol for
	local calls under W32.  (Bug#6784)

2010-12-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-methods): Add recursive options to "scpc" and
	"scpx".

2010-12-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method-alist, tramp-default-user-alist)
	(tramp-local-host-regexp, tramp-prefix-domain-format)
	(tramp-prefix-domain-regexp): Set tramp-autoload cookie.

	* tramp-efs.el:
	* tramp-ftp.el:
	* tramp-gvfs.el:
	* tramp-gw.el:
	* tramp-imap.el:
	* tramp-sh.el:
	* tramp-smb.el: Add tramp-autoload cookie for initialisation code
	of `tramp-default-method-alist' and `tramp-default-user-alist'.

2010-12-27  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (tramp-loaddefs.el): Handle case on systems on which
	the format of absolute pathes are different between its shell and
	in emacsen, like MSYS.  Reported by Yosuke YAMADA
	<sunasaji@gmail.com>.
